--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.0",
     "@tanstack/react-query": "^5.59.20",
+    "@thirdweb-dev/react": "^4.9.4",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "react": "^18",
