--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@rainbow-me/rainbowkit": "^2.2.0",
     "@tanstack/react-query": "^5.59.20",
     "@thirdweb-dev/react": "^4.9.4",
+    "chart.js": "^4.4.6",
     "lucide-react": "^0.456.0",
-    "next": "15.0.3",
+    "next": "14.2.15",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
