--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@tanstack/react-query": "^5.59.20",
     "@thirdweb-dev/react": "^4.9.4",
     "chart.js": "^4.4.6",
+    "encoding": "^0.1.13",
     "lucide-react": "^0.456.0",
     "next": "14.2.15",
+    "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-toastify": "^10.0.6",
     "viem": "^2.21.44",
     "wagmi": "^2.12.30"
   },
