--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.0",
     "@tanstack/react-query": "^5.59.20",
+    "axios": "^1.7.8",
     "chart.js": "^4.4.6",
     "encoding": "^0.1.13",
     "lucide-react": "^0.456.0",
