--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.8",
     "chart.js": "^4.4.6",
     "encoding": "^0.1.13",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.456.0",
     "next": "14.2.15",
     "pino-pretty": "^13.0.0",
@@ -26,6 +27,7 @@
     "wagmi": "^2.12.30"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
